--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,25 @@
 .navbar{
     height: 100vh;
-    width: 15vh;
-    background-color: grey;
+    width: 100px;
+    background-color: rgb(28, 26, 26);
+    position:absolute;
+    z-index: 3;
+    min-height: 500px;
+
+    .logo{
+        display: block;
+        position:absolute;
+        top:0;
+        padding:8px;
+
+        img{
+            display: block;
+            margin:8px auto;
+            width:80px;
+            height:auto;
+        }
+    }
+    nav{
+        
+    }
 }
