--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .navbar{
     height: 100vh;
     width: 100px;
-    background-color: rgb(28, 26, 26);
+    background-color: rgb(36, 34, 34);
     position:absolute;
     z-index: 3;
     min-height: 500px;
@@ -15,11 +15,20 @@
         img{
             display: block;
             margin:8px auto;
+            box-sizing: border-box;
             width:80px;
             height:auto;
         }
     }
     nav{
-        
+       display: block;
+       text-align: center;
+       width: 100px;
+       height: 200px;
+       margin-top: -120px;
+       a{
+        display: block;
+        line-height: 100px;
+       }
     }
 }
