--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 .navbar{
     height: 100vh;
+    text-align: center;
     width: 100px;
     background-color: rgb(36, 34, 34);
     position:absolute;
@@ -10,7 +11,7 @@
         display: block;
         position:absolute;
         top:0;
-        padding:8px;
+        padding:11px;
 
         img{
             display: block;
@@ -18,9 +19,11 @@
             box-sizing: border-box;
             width:80px;
             height:auto;
+           
         }
     }
     nav{
+        position: absolute;
        display: block;
        text-align: center;
        width: 100px;
@@ -28,7 +31,48 @@
        margin-top: -120px;
        a{
         display: block;
-        line-height: 100px;
+        line-height: 80px;
+        text-decoration: none;
+        position: relative;
+        
+
+        &:hover{
+            
+            svg{
+                opacity: 0;
+                transition: all 0.1s ease-out;
+            }        
+            &::after{
+                opacity: 1;
+            }
+        }
+       
+        &::after{
+            content: "";
+            font-family: 'Brush Script MT', cursive;
+            font-size: 15px;
+            position: absolute;
+            left: 0;
+            text-align: center;
+            width: 100%;
+            color: yellow;
+            opacity: 0;
+            transition: all 0.3s ease-out;
+           }
+        &.home::after{
+            content: "HOME";
+        }
+        &.about::after{
+            content: "ABOUT";
+        }
+        &.projects::after{
+            content: "PROJECTS";
+        }
+        &.contact::after{
+            content: "CONTACT";
+        }
+        
+           
        }
        
 }
