--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
+    font-family: "Carter One";
 }
 body{
     background:rgb(21, 21, 63);
