--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,93 +1,29 @@
 .homeComponent{
-    position:absolute;
-    left:150px;
-    top: 50px;
-    color: white;
+    width: 100vw;
+    height: 100vh;
+    border: 4px solid black;
 
-    .text-zone{
+    .textZone{
         position: relative;
-        h1{
-            font-size: 3.5rem;
-        }
-        .sText,.kText{
-            width: 8.5rem;
-            position: relative;
-            left: 1.7rem;
-            top: -1.8rem;
-            transition: 0.5s ease-in-out;
+        min-width: 50vw;
+        color: white;
+        left: 100px;
+        width: 90vw;
+        height: 95vh;
+        border: 4px solid yellow;
 
-            &:hover{
-                cursor: pointer;
-                transform: scale(1.3);
+        h1{
+            border: 2px solid white;
+            .name{
+                margin-left: 5vw;
             }
-  
-        }
-        .intro{
-            position: relative;
-            left: 4rem;
-            
+            img{
+                width: clamp(4rem,9vw,8rem);
+                transform: translate(2.7vw,-1.9vw);
+            }
         }
         h2{
-            position: relative;
-            left: 10rem;
-            opacity: 20%;
-            display: inline;
-
-            &:hover{
-                opacity: 80%;
-                cursor: pointer;
-            }
+            font-size: 2vw;
         }
-        .images{
-            .sImg,.kImg{
-                position: relative;
-                width: 18.5rem;
-                opacity: 20%;
-
-                &:hover{
-                    opacity: 80%;
-                    cursor: pointer;
-                }
-            }
-            .sImg{
-                left: 32rem;
-                transform: rotateZ(10deg);
-            }
-            .kImg{
-                left:32rem;
-                transform: rotateZ(7deg);
-            }
-            .bulb{
-                position: relative;
-                transform: rotateZ(5deg);
-                left: 58rem;
-                top: -15rem;
-                opacity: 20%;
-
-                &:hover{
-                    color: yellow;
-                    opacity: 100%;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
-}
-
-@media screen and (max-width:998px){
-    .homeComponent{
-        .text-zone{
-            h1{
-                font-size: 2.5rem;
-            }
-            .sText,.kText{
-                width:5rem;
-                
-            }
-            h2{
-                font-size: 1.5rem;
-            }
-        }
-      
     }
 }
