--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -24,27 +24,28 @@
         width: 100%;
         border: 2px solid white;
         a{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.2rem;
+            padding: 25px;
+            border: 2px solid yellow;
             text-decoration: none;
             position: absolute;
+            
+
             svg{
                 font-size: 2.6rem;
                 color: white;
+                transition: 0.2s ease-in-out;
             }
             &.home{
                 left: 10vw;
             }
             &.about{
-                left: 20vw;
+                left: 25vw;
             }
             &.projects{
-                left: 30vw;
+                left: 40vw;
             }
             &.contact{
-                left: 40vw;
+                left: 55vw;
             }
             &:hover{
                 svg{
@@ -53,17 +54,29 @@
                 &::after{
                     content: "";
                     opacity: 1;
-                    font-family: 'Brush Script MT', cursive;
+                    
                 }
             }
             &::after{
                 content: "";
+                font-size: 1.3rem;
+                color: yellow;
                 position: absolute;
                 width: 100%;
+                height: 100%;
                 opacity: 0;
+                top: 0;
+                margin: 30px 0;
+                left: 0;
+                text-align: center;
+                transition: 0.2s ease-in-out;
+                
+
             }
             &.home::after{
                 content: "HOME";
+                
+                
             }
             &.about::after{
                 content: "ABOUT";
@@ -73,6 +86,11 @@
             }
             &.contact::after{
                 content: "CONTACT";
+            }
+            &.active{
+                    svg{
+                        color: yellow;
+                    }
             }
             
         }
@@ -95,6 +113,13 @@
             font-size: 1.2rem;
             display: inline;
             padding-left: 2vw;
+            svg{
+                color: grey;
+
+                &:hover{
+                    color: white;
+                }
+            }
         }
     }
 }
