--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     overflow: hidden;
     position: absolute;
     width: 100vw;
@@ -7,96 +7,113 @@
     box-shadow: 2px 5px;
     z-index: 3;
 
-    .logo{
+    .logo {
         position: relative;
-        border: 2px solid yellow;
-        img{
+        // border: 2px solid yellow;
+        padding-left: 30px;
+
+        img {
             width: 5.5rem;
-            padding-left: 5px;
+
         }
     }
-    nav{
+
+    nav {
         margin-left: 8vw;
         align-items: center;
         position: absolute;
         display: flex;
         height: 100%;
         width: 100%;
-        border: 2px solid white;
-        a{
+
+        // border: 2px solid white;
+        a {
             padding: 25px;
-            border: 2px solid yellow;
+            // border: 2px solid yellow;
             text-decoration: none;
             position: absolute;
-            
 
-            svg{
+
+            svg {
                 font-size: 2.6rem;
                 color: white;
                 transition: 0.2s ease-in-out;
             }
-            &.home{
+
+            &.home {
                 left: 10vw;
             }
-            &.about{
+
+            &.about {
                 left: 25vw;
             }
-            &.projects{
+
+            &.projects {
                 left: 40vw;
             }
-            &.contact{
+
+            &.contact {
                 left: 55vw;
             }
-            &:hover{
-                svg{
+
+            &:hover {
+                svg {
                     opacity: 0;
                 }
-                &::after{
+
+                &::after {
                     content: "";
                     opacity: 1;
-                    
+
                 }
             }
-            &::after{
+
+            &::after {
                 content: "";
                 font-size: 1.3rem;
                 color: yellow;
                 position: absolute;
+                font-family: 'Brush Script MT', cursive;
                 width: 100%;
-                height: 100%;
                 opacity: 0;
                 top: 0;
                 margin: 30px 0;
                 left: 0;
                 text-align: center;
                 transition: 0.2s ease-in-out;
-                
+
 
             }
-            &.home::after{
+
+            &.home::after {
                 content: "HOME";
-                
-                
+
+
             }
-            &.about::after{
+
+            &.about::after {
                 content: "ABOUT";
             }
-            &.projects::after{
+
+            &.projects::after {
                 content: "PROJECTS";
             }
-            &.contact::after{
+
+            &.contact::after {
                 content: "CONTACT";
             }
-            &.active{
-                    svg{
-                        color: yellow;
-                    }
+
+            &.active {
+                svg {
+                    color: yellow;
+                }
             }
-            
+
         }
     }
-    ul{
-        border: 2px solid red;
+
+    ul {
+        // border: 2px solid red;
         margin-bottom: 0;
         margin-left: 5rem;
         padding-right: 2vw;
@@ -107,19 +124,61 @@
         position: absolute;
         right: 1vw;
 
-        li{
+        li {
             top: 2.5rem;
             position: relative;
             font-size: 1.2rem;
             display: inline;
             padding-left: 2vw;
-            svg{
+
+            svg {
                 color: grey;
 
-                &:hover{
+                &:hover {
                     color: white;
                 }
             }
         }
+    }
+
+    .resNav {
+        position: absolute;
+        z-index: 3;
+        right: 2vw;
+        display: none;
+
+
+
+        svg {
+            color: white;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
+
+    }
+}
+
+@media screen and (max-width:980px) {
+    .navbar {
+        nav {
+            display: none;
+        }
+
+        ul {
+            display: none;
+        }
+
+        .resNav {
+            display: block;
+
+            .active {
+                display: none;
+            }
+        }
+
+
     }
 }
