--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -163,6 +163,8 @@
 
 @media screen and (max-width:980px) {
     .navbar {
+ 
+
         nav {
             display: none;
         }
@@ -178,6 +180,106 @@
                 display: none;
             }
         }
+        .mobileNav{
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            width: 65vw;
+            height: 100vh;
+            right: 0;
+            top: 7.1rem;
+            background-color: rgb(36, 34, 34);
+            transition: 0.3s ease-in-out;
+          
+            
+            a{
+                position: relative;
+                width: 100%;
+              
+                
+                
+                &.home{
+                    left: 10%;
+                }
+                &.about{
+                    left: 10%;
+                }
+                &.projects{
+                    left: 10%;
+                }
+                &.contact{
+                    left: 10%;
+                }
+                &:hover svg{
+                    opacity: 1;
+                }
+                &:hover{
+                    transform: scale(1.1);
+                }
+
+                &::after{
+                    opacity: 1;
+                    position: relative;
+                    left: 10%;
+                    color: white;
+                }
+                &.active::after{
+                    color: yellow;
+                }
+                
+            }
+        }
+        .mobileNavHidden{
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            width: 65vw;
+            height: 100vh;
+            right: -1000px;
+            top: 7.1rem;
+            background-color: rgb(36, 34, 34);
+            transition: 0.3s ease-in-out;
+          
+            
+            a{
+                position: relative;
+                width: 100%;
+              
+                
+                
+                &.home{
+                    left: 10%;
+                }
+                &.about{
+                    left: 10%;
+                }
+                &.projects{
+                    left: 10%;
+                }
+                &.contact{
+                    left: 10%;
+                }
+                &:hover svg{
+                    opacity: 1;
+                }
+                &:hover{
+                    transform: scale(1.1);
+                }
+
+                &::after{
+                    opacity: 1;
+                    position: relative;
+                    left: 10%;
+                    color: white;
+                }
+                &.active::after{
+                    color: yellow;
+                }
+                
+            }
+        }
+        
+        
 
 
     }
