--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -37,7 +37,7 @@
 
             svg {
                 font-size: 2.6rem;
-                color: white;
+                color: rgb(113, 110, 110);
                 transition: 0.2s ease-in-out;
             }
 
